<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:theme="@android:style/Theme.NoTitleBar">


    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="top|center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="40dp"
            android:shadowColor="#000000"
            android:text="@string/rules"
            android:textColor="#eeeeee"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="top|center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="40dp"
            android:shadowColor="#000000"
            android:text=""
            android:textColor="#eeeeee"
            android:textSize="45sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="406dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@null"
            android:contentDescription="@string/imagebutton_desc"
            android:onClick="newWord"
            android:paddingTop="50dp"
            android:scaleX="0.6"
            android:scaleY="0.6"
            app:srcCompat="@drawable/butt" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="53dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/navbutton_desc"
            android:onClick="navBar"
            app:srcCompat="@drawable/arrow" />

    </FrameLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/bg3"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkEasy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="90dp"
                android:button="@drawable/checker"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/simple_word"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/checkNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:button="@drawable/checker"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/normal_word"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/checkHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:button="@drawable/checker"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/hard_word"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/checkInsane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:button="@drawable/checker"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/insane_word"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/checkHYIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:button="@drawable/checker"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/hyip_word"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/checkPaging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:button="@drawable/checker"
                android:checked="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/no_listing"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="173dp"
                android:layout_height="74dp"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp"
                android:contentDescription="@string/clearbutton_desc"
                android:onClick="refresh"
                app:srcCompat="@drawable/butt2" />

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>